# QuizWebGame

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  package.json  pyproject.toml
.github/workflows/: ci.yml
client/: package.json
client/public/: index.html
client/src/: App.vue  main.js
client/src/components/: HelloWorld.vue  HomePage.vue  NewQuiz.vue
client/src/components/Bars/: NavBar.vue  PageFooter.vue
client/src/components/Quiz/: AllQuizzes.vue  CreateQuestion.vue  CreateQuiz.vue  CustomQuiz.vue  DemoPlay.vue  DemoQuiz.vue  HomeButtons.vue
client/src/components/auth/: LoginPage.vue  RegisterPage.vue
core_apps/questions/: admin.py  apps.py  models.py  pagination.py  permissions.py  serializers.py  urls.py  views.py
core_apps/questions/migrations/: 0001_initial.py
core_apps/quizzes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core_apps/quizzes/migrations/: 0001_initial.py
core_apps/users/: admin.py  apps.py  forms.py  managers.py  models.py  serializers.py  urls.py
core_apps/users/migrations/: 0001_initial.py
docker/local/django/: Dockerfile  entrypoint.sh  start.sh
docker/local/nginx/: Dockerfile  default.conf
docker/local/vue/: Dockerfile
quiz_api/: asgi.py  urls.py  wsgi.py
quiz_api/settings/: base.py  local.py
